fix some css with the review form host image alignment

--- a/styles/HomePage.scss
+++ b/styles/HomePage.scss
@@ -72,7 +72,6 @@
       height: 60%;
       padding: 10px 15px;
       .hostAndDetailButton {
-        margin-top: 50px;
         .buttonWrap {
           position: relative;
           padding: 0;
